style.css
/* ... */
/* 

SMALL PHONES, LARGE SMARTPHONES 

*/

@media (max-width: 550px) {

   /* NAV */

    .nav__main {
        max-width: 220px;
    }
    .nav__logo {
        height: 25px;
        width: 25px;
    }
    .nav__title {
        font-size: 16px;
    }
    .nav__link a {
        font-size: 11px;
    }

    /* HEADER */

    .header__content {
        width: 100%;
        max-width: 500px;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 48px;
    }
    .profile__img {
        display: block;
        max-width: 200px;
        border: 2px solid #b6b6b6; /*light gray*/
        margin: 0 auto;
    }
    .header__text {
        width: 100%;
        max-width: 400px;
        text-align: center;
    }
    .header__title {
        font-size: 14px;
    }
    .header__title--span {
        font-size: 18px;
    }
    .header__description {
        font-size: 12px;
        padding-bottom: 20px;
    }
    .header__button {
        padding: 6px;
        font-size: 12px;
        margin: 16px auto 0 auto;
    }

    /* ABOUT */

    .about__row {
        display: flex;
        flex-direction: column;
    }
    .about__description {
        max-width: 400px;
        margin-top: 32px;
    }
    .about__title {
        font-size: 22px;
    }
    .side-note {
        font-size: 16px;
    }
    .about__para {
        font-size: 12px;
    }
    .about__note {
        max-width: 270px;
        font-size: 12px;
    }
    .about__img--wrapper {
        display: block;
    }
    .about__img {
        width: 100px;
        border: 2px solid #b6b6b6; /*light gray*/
        margin-bottom: 36px;
    }
    .about__img--1 {
        transform: translateY(0px);
    }
    .about__img--3 {
        transform: translateY(0px);
    }

    /* EPISODES */

    .episodes__title {
        font-size: 24px;
        margin-bottom: 48px;
    }
    .episodes__description--content {
        font-size: 20px;
        margin: 8px;
    }
    .episodes__para {
        padding-bottom: 6px;
    }
    .fa-spotify,
    .fa-podcast {
        font-size: 20px;
        height: 30px;
        width: 30px;
        padding: 5px 5px;
    }
    .episode__tiles {
        max-width: 500px;
        gap: 60px;
    }
    .episode__tile {
        width: 100px;
        padding: 8px;
    }
    .episode__number {
        font-size: 16px;
    }
    .episode__title {
        font-size: 12px;
    }

    /* CONTACT */

    .contact__title {
        font-size: 22px;
    }
    .contact__para {
        font-size: 16px;
    }
    .contact__input {
        font-size: 14px;
    }
    .contact__btn {
        font-size: 14px;
    }

    /* FOOTER */

    .footer__top {
        max-width: 550px;
    }
    .footer__note {
        font-size: 20px;
    }
    .footer__nav--links {
        font-size: 16px;
    }
    .footer__divider {
        height: 3px;
        max-width: 400px;
        margin: 24px;
    }
    .footer__bottom {
        max-width: 650px;
    }
    .footer__logo {
        height: 30px;
        width: 30px;
    }
    .footer__copyright {
        font-size: 8px;
    }
    .fa-instagram,
    .fa-tiktok,
    .fa-youtube {
        height: 24px;
        width: 24px;
        font-size: 12px;
        padding: 6px 5px;
    }
}

